<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.8"
        android:contentDescription="@string/todo"
        android:src="@drawable/image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#60A1A0A3"
        android:padding="20dp"
        android:text="@string/store"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/result"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:background="#60A1A0A3"
        android:padding="50dp"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/store" />

    <!-- first row buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_1"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_1"
        app:layout_constraintEnd_toStartOf="@id/key_2"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/result"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_2"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_2"
        app:layout_constraintEnd_toStartOf="@id/key_3"
        app:layout_constraintStart_toEndOf="@id/key_1"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_3"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_3"
        app:layout_constraintEnd_toEndOf="@id/key_summ"
        app:layout_constraintStart_toEndOf="@id/key_2"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_summ"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_summ"
        app:layout_constraintEnd_toEndOf="@+id/result"
        app:layout_constraintStart_toEndOf="@id/key_3"
        app:layout_constraintTop_toBottomOf="@id/result" />

    <!-- second row buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_4"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_4"
        app:layout_constraintEnd_toStartOf="@id/key_5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_5"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_5"
        app:layout_constraintEnd_toStartOf="@id/key_6"
        app:layout_constraintStart_toEndOf="@id/key_4"
        app:layout_constraintTop_toBottomOf="@id/key_2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_6"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_6"
        app:layout_constraintEnd_toStartOf="@id/key_minus"
        app:layout_constraintStart_toEndOf="@id/key_5"
        app:layout_constraintTop_toBottomOf="@id/key_3" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_minus"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_6"
        app:layout_constraintTop_toBottomOf="@id/key_summ" />

    <!-- third row buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_7"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_7"
        app:layout_constraintEnd_toStartOf="@id/key_8"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/key_4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_8"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_8"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_9"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_9"
        app:layout_constraintEnd_toStartOf="@id/key_multi"
        app:layout_constraintStart_toEndOf="@id/key_8"
        app:layout_constraintTop_toBottomOf="@id/key_6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_multi"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_multi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_minus" />

    <!-- fourth row buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_0"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_0"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@id/key_7"
        app:layout_constraintTop_toBottomOf="@id/key_7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_dot"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_dot"
        app:layout_constraintEnd_toStartOf="@id/key_9"
        app:layout_constraintStart_toEndOf="@id/key_9"
        app:layout_constraintTop_toBottomOf="@id/key_9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_split"
        style="@style/CalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_min"
        android:text="@string/key_split"
        app:layout_constraintEnd_toEndOf="@id/key_multi"
        app:layout_constraintStart_toEndOf="@id/key_dot"
        app:layout_constraintTop_toBottomOf="@id/key_multi" />

    <!-- fifth row buttons-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/key_equals"
        style="@style/CalcButton"
        android:layout_width="@dimen/layout_width_value"
        android:layout_height="wrap_content"
        android:text="@string/key_equals"
        app:layout_constraintEnd_toEndOf="@id/key_split"
        app:layout_constraintStart_toStartOf="@id/key_0"
        app:layout_constraintTop_toBottomOf="@id/key_0"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>